--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: sites115 # you probably want to 'snapcraft register <name>'
-base: core22 # the base snap is the execution environment for this snap
-version: '2.1.0' # just for humans, typically '1.2+git' or '1.3.2'
+base: core24 # the base snap is the execution environment for this snap
+version: '2.3' # just for humans, typically '1.2+git' or '1.3.2'
 summary: sites115 helps in building websites # 79 char long summary
 description: |
   sites115 helps in building websites.
@@ -10,11 +10,9 @@ description: |
 grade: stable # must be 'stable' to release into candidate/stable channels
 confinement: strict # use 'strict' once you have the right plugs and slots
 
-architectures:
-  - build-on: amd64
-  - build-on: arm64
-  - build-on: armhf
-
+platforms:
+  amd64:
+  arm64:
 
 parts:
   all-needed-files:
